--- a/styles/globals.css
+++ b/styles/globals.css
@@ -241,20 +241,20 @@
   background: rgba(255, 45, 7, 0.25);
 }
 
-.Scraper {
-  border: 0.1rem solid rgb(0, 0, 0);
+.Databases {
+  border: 0.1rem solid rgb(248, 2, 2);
 }
 
-.Scraper:hover {
-  background: rgba(0, 0, 0, 0.25);
+.Databases:hover {
+  background: rgba(207, 21, 21, 0.25);
 }
 
-.CNN {
-  border: 0.1rem solid rgb(194, 203, 255);
+.Machine-Learning{
+  border: 0.1rem solid rgb(18, 51, 236);
 }
 
-.CNN:hover {
-  background: rgba(194, 203, 255, 0.25);
+.Machine-Learning:hover {
+  background: rgba(38, 67, 231, 0.25);
 }
 
 .MLOps {
@@ -265,52 +265,52 @@
   background: rgba(194, 203, 255, 0.25);
 }
 
-.Markov-Decision-Process {
-  border: 0.1rem solid rgb(0, 0, 0);
+.Physical-AI {
+  border: 0.1rem solid rgb(16, 245, 54);
 }
 
-.Markov-Decision-Process:hover {
-  background: rgba(0, 0, 0, 0.25);
+.Physical-AI:hover {
+  background: rgba(0, 241, 40, 0.25);
 }
 
-.Value-Iteration {
-  border: 0.1rem solid rgb(0, 0, 0);
+.Medical-AI {
+  border: 0.1rem solid rgb(251, 255, 0);
 }
 
-.Value-Iteration:hover {
-  background: rgba(0, 0, 0, 0.25);
+.Medical-AI:hover {
+  background: rgba(231, 247, 10, 0.25);
 }
 
-.RL {
-  border: 0.1rem solid rgb(43, 233, 173);
+.Industrial-AI {
+  border: 0.1rem solid rgb(233, 10, 185);
 }
 
-.RL:hover {
-  background: rgba(43, 233, 173, 0.25);
+.Industrial-AI:hover {
+  background: rgba(243, 9, 204, 0.25);
 }
 
 .Software-Design {
-  border: 0.1rem solid rgb(43, 233, 173);
+  border: 0.1rem solid rgb(231, 88, 184);
 }
 
 .Software-Design:hover {
-  background: rgba(43, 233, 173, 0.25);
+  background: rgba(253, 88, 212, 0.25);
 }
 
-.GenAI {
+.Web-Development {
   border: 0.1rem solid rgb(43, 113, 233);
 }
 
-.GenAI:hover {
+.Web-Development:hover {
   background: rgba(43, 84, 233, 0.25);
 }
 
-.Vanilla-Implementation {
-  border: 0.1rem solid rgb(0, 0, 0);
+.LaTeX {
+  border: 0.1rem solid rgb(16, 205, 252);
 }
 
-.Vanilla-Implementation:hover {
-  background: rgba(0, 0, 0, 0.25);
+.LaTeX:hover {
+  background: rgba(97, 216, 17, 0.25);
 }
 
 .PyPi {
